# SolidWrap

./: LICENSE  README.rst  ReadMe.rst  pyproject.toml  setup.py  solidwrap.py  test.py
SolidWrap/: pyproject.toml  setup.py
SolidWrap/solidwrap/: __init__.py  solidwrap.py
SolidWrap/solidwrap.egg-info/: PKG-INFO  SOURCES.txt
SolidWrap/solidwrap/rsc/: swconst.py
SolidWrap/tests/: test.py
info/: API REFERENCE.rst  API Reference.rst  LICENSE
solidwrap/: __init__.py  containers.py  logger.py  pyproject.toml  setup.py  solidwrap.py  utilities.py
solidwrap.egg-info/: SOURCES.txt  requires.txt
solidwrap/info/: API Reference.rst  LICENSE
solidwrap/solidwrap/: __init__.py  solidwrap.py
solidwrap/solidwrap.egg-info/: PKG-INFO  requires.txt  top_level.txt
solidwrap/solidwrap/extensions/: __init__.py  extensions.py
solidwrap/solidwrap/profiling/: __init__.py  profiling.py
solidwrap/solidwrap/utilities/: __init__.py  utilities.py
solidwrap/tests/: test.py
tests/: test.py  tests.py
