[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "solidwrap"
version = "2.2.1"
authors = [
  { name="Sean Yeatts" },
]
license = {text = "MIT License"}
description = "Wrapper for SolidWorks and PDM APIs for a streamlined, Pythonic workflow."
readme = "README.rst"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Microsoft :: Windows",
]

[project.urls]
"Homepage" = "https://github.com/SeanYeatts/SolidWrap/tree/main"
"Bug Tracker" = "https://github.com/users/SeanYeatts/projects/6/views/1"
