[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "solidwrap"
version = "0.0.1"
authors = [
  { name="Sean Yeatts" },
]
description = "Incomplete."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"GitHub" = "https://github.com/SeanYeatts/quickpathstr.git"